src/components/chatPage/ChannelList/Channel/Channel.scss
.c-channel {
  display: flex;
  align-items: center;
  width: 100%;
  height: 64px;
  min-height: 64px;
  padding: 0 10px;
  background: var(--background-color);
  border: solid 1px var(--border-color);
  border-radius: 14px;
  font-family: 'Montserrat', sans-serif;
  cursor: pointer;
  transition: all 0.2s ease;
  gap: 12px;
  user-select: none;

  &:hover {
    background: var(--hover-background-color);
  }

  &.active {
    background: linear-gradient(135deg, var(--active-channel-gradient-start), var(--active-channel-gradient-end));
    border-color: var(--active-channel-border-color);
    box-shadow: 0 1px 4px var(--active-channel-shadow);
  }

  .channel-image {
    flex: 0 0 44px;
    height: 44px;

    img {
      width: 44px;
      height: 44px;
      object-fit: cover;
      border-radius: 50%;
    }
  }

  .channel-info {
    flex: 1 1;
    min-width: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 4px;
    overflow: hidden;

    .channel-info-top {
      display: flex;
      align-items: baseline;
      justify-content: space-between;
      gap: 8px;

      .title {
        font-size: 13.5px;
        font-weight: 600;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      .activity {
        flex-shrink: 0;
        font-size: 11px;
        color: var(--common-color-1);
        padding-right: 2px;
        white-space: nowrap;
      }
    }

    .channel-info-bottom {
      display: flex;
      align-items: center;
      justify-content: space-between;
      gap: 8px;
      overflow: hidden;

      .message {
        flex: 1 1;
        font-size: 12px;
        color: var(--common-color-1);
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

        b {
          color: var(--font-color-primary-1);
        }

        &.empty {
          opacity: 0.5;
        }
      }

      .counter {
        flex: 0 0 auto;
        display: grid;
        place-items: center;
        font-family: 'Roboto', sans-serif;
        font-size: 10px;
        font-weight: 600;
        transition: all 0.1s linear;

        div {
          display: grid;
          place-items: center;
          min-width: 20px;
          height: 20px;
          padding: 0 5px;
          border-radius: 10px;
          background: var(--common-color-0);
          color: var(--font-color-primary-2);
        }
      }
    }
  }
}

